[package]
name = "rs_iss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde_json = { version = "1.0.114" }
rgeo = {git ="https://github.com/etrombly/rgeo.git"}
OrbitalEphemerisMessage = { git="https://github.com/donaldcampbelljr/OrbitalEphemerisMessage.git" }
coord_transforms = "1.4.0"
nalgebra = "0.32.4"
